--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 			</div>
 			<div class="wrapper">
 				<div class="about-content">
-					<div class="page__img" id="slides"><img class="slide showing delay" src="assets/img/img-about-1.jpg"
+					<div class="page__img" id="slides"><img class="slide showing delay" src="assets/img/it's me.jpg"
 							alt=""></div>
 					<div class="page__content">
 						<p class="page__text">Разработчик сайтов + интренет-маркетолог(навык рекламы) + смм специалист
