--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 	<base href="build/">
-	<meta property="og:description" content="Frontend developer. Разработаю Вашу идею на профессиональном уровне!">
-	<title>Portfolio</title>
+	<title>Nikita Shvetsov Frontend developer</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css">
 	<script type="text/javascript">
 		(function (m, e, t, r, i, k, a) {
@@ -44,7 +43,7 @@
 				</div>
 			</div>
 		</section>
-		<header class="header">
+		<header class="header isAnimate">
 			<div class="wrapper">
 				<div class="header-content">
 					<nav class="header__navbar"><a class="header__navbar-link page__subtitle" href="./">Nikita<span
@@ -59,7 +58,7 @@
 		<button class="btn-scrollTop page__btn">
 			<div class="page__btn_icon_arrow-top"> </div><span>наверх</span>
 		</button>
-		<section class="banner">
+		<section class="banner isAnimate">
 			<canvas class="canvas"></canvas>
 			<div class="banner__logo">
 				<div class="page__subtitle">Nikita<span class="page_bold">Shvetsov</span></div>
@@ -160,7 +159,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="services">
+		<section class="services isAnimate">
 			<div class="page__title page_transform-uppercase page_text-center">
 				<h2 class="page__subtitle_big">Услуги</h2>
 				<h2 class="page__title_main page__title-h2 page_bold">Услуги</h2>
@@ -243,7 +242,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="advantages">
+		<section class="advantages isAnimate">
 			<div class="page__title page_transform-uppercase page_text-center">
 				<h2 class="page__subtitle_big">Преимущества</h2>
 				<h2 class="page__title_main page__title-h2 page_bold">Преимущества</h2>
@@ -251,22 +250,25 @@
 			<div class="wrapper">
 				<div class="advantages-content">
 					<ol class="page__lists">
-						<li class="page__list-item"> <span class="page__line_before">Профессиональные навыки</span></li>
-						<li class="page__list-item"> <span class="page__line_before">Соблюдение сроков</span></li>
-						<li class="page__list-item"> <span class="page__line_before">Оптимизация изображения и
-								кода</span></li>
-						<li class="page__list-item"> <span class="page__line_before">Чистый валидный код</span></li>
-						<li class="page__list-item"> <span class="page__line_before">Ответсвенное отношение к
-								работе</span></li>
-						<li class="page__list-item"> <span class="page__line_before">Всегда открыт к диалогу</span></li>
-						<li class="page__list-item"> <span class="page__line_before">Большую часть дня online</span>
+						<li class="page__list-item"> <span class="page__line_before">Профессиональный подход</span></li>
+						<li class="page__list-item"> <span class="page__line_before">Использование современных
+								технологий</span></li>
+						<li class="page__list-item"> <span class="page__line_before">Здравая оценка сроков</span></li>
+						<li class="page__list-item"> <span class="page__line_before">Разработка по стандартам</span>
 						</li>
-						<li class="page__list-item"> <span class="page__line_before">Поддержка своего кода</span></li>
+						<li class="page__list-item"> <span class="page__line_before">Большую часть дня Online<sup>
+									<small>24/7</small></sup></span></li>
+						<li class="page__list-item"> <span class="page__line_before">Оптимизация процесса и кода</span>
+						</li>
+						<li class="page__list-item"> <span class="page__line_before">Работаю исключительно по ТЗ</span>
+						</li>
+						<li class="page__list-item"> <span class="page__line_before">Ответственное исполнение</span>
+						</li>
 					</ol>
 				</div>
 			</div>
 		</section>
-		<section class="projects">
+		<section class="projects isAnimate">
 			<div class="page__title page_transform-uppercase page_text-center">
 				<h2 class="page__subtitle_big">Проекты</h2>
 				<h2 class="page__title_main page__title-h2 page_bold">Проекты</h2>
@@ -357,7 +359,7 @@
 			</div>
 		</section>
 		<div class="page__toogle"><a class="page__btn" href="projects/projects.html">Смотреть больше</a></div>
-		<section class="about" id="about">
+		<section class="about isAnimate" id="about">
 			<div class="page__title page_transform-uppercase page_text-center">
 				<h2 class="page__subtitle_big">Обо мне</h2>
 				<h2 class="page__title_main page__title-h2 page_bold">Обо мне</h2>
@@ -367,49 +369,127 @@
 					<div class="page__img" id="slides"><img class="slide showing delay" src="assets/img/it's me.jpg"
 							alt=""></div>
 					<div class="page__content">
-						<p class="page__text">Разработчик сайтов + интренет-маркетолог(навык рекламы) + смм специалист
-							прототипирование юзабилити сео специалист </p>
-						<p class="page__text page_padding-bottom-40">Имею выше перечисленные навыки Делаю сайты на любых
-							этапах разработки могу помочь проконсультировать с макетами и удоббством пользовотеля и
-							реализацией на этапе протатипирования </p>
-						<p class="page__text">Чистый и валидный код который сможет прочитать любой программист </p>
-						<p class="page__text">Поддержка по сайту после сдачи проекта </p>
-						<p class="page__text page_padding-bottom-40">Будем настраиваться на длительное сотруднечества а
-							не "верстальщик на одну ночь" </p>
-						<p class="page__text page_padding-bottom-40">Если вы из Москвы, то при сотрудничестве буду рад
+						<p class="page__text page_padding-bottom-20">Frontend developer, профессионально создаю сайты и
+							веб-приложения, также имею навыки в интернет-маркетинге(понимание того что необходимо для
+							сайта с точки зрения бизнеса).</p>
+						<p class="page__text page_padding-bottom-20">Считаю важным и правильным на этапе
+							прототипирования, <strong class="page_bold">совещаться с разработчиком!</strong></p>
+						<p class="page__text"> <strong class="page_bold">On default: </strong></p>
+						<ul class="page__lists">
+							<li class="page__list page__list_text">Адаптивная верстка, даже если не&nbsp;имеете макеты
+								сделаю адаптив&nbsp;по <strong class="page_bold">методологии responsive;</strong></li>
+							<li class="page__list page__list_text">Внедрю микроразметку <strong
+									class="page_bold">schema.org и&nbsp;Open Graph, </strong>а&nbsp;также семантическую
+								верстку;</li>
+						</ul><a class="page__link page__link_active open-modal" href=""
+							data-modal="modal-skills">Открыть полный список</a>
+						<p class="page__text">В моей команде есть web-дизайнер, верстальщик, seo-специалист, маркетолог.
+						</p>
+						<p class="page__text page_padding-bottom-20">В веб-разработке более 3-х лет.</p>
+						<p class="page__text page_padding-bottom-20">Если вы из Москвы, то при сотрудничестве буду рад
 							встретиться лично для обсуждения тонкостей работы!</p>
-						<button class="page__btn js__create-modal">Связаться со мной</button>
+						<button class="page__btn js__create-modal open-modal" data-modal="modal-callback">Связаться со
+							мной</button>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="modal modal-callback page_hidden">
-			<div class="wrapper">
+		<section class="modal modal-callback page_hidden" id="modal-callback">
+			<div class="modal-container">
 				<div class="modal__action">
-					<button class="page__btn page__btn_circle page__btn_close"></button>
+					<button class="page__btn page__btn_circle page__btn_close close-modal"
+						data-modal="modal-callback"></button>
 				</div>
 				<div class="modal__content">
 					<h2 class="page__title-h2">Связаться со мной</h2>
 					<p class="page__text">Свяжитесь со мной любым из способов ниже</p>
-					<div class="social">
-						<a class="social__item-link social__item-icon" href="+79152834518" target="_blank">
-							<img class="page__img" src="assets/img/social/icon-social-phone.svg">
-						</a>
-						<a class="social__item-link social__item-icon" href="+79152834518" target="_blank">
-							<img class="page__img" src="assets/img/social/icon-social-email.svg">
-						</a>
-						<a class="social__item-link social__item-icon" href="https://vk.com/darknesschxld"
-							target="_blank">
-							<img class="page__img" src="assets/img/social/icon-social-vk.svg">
-						</a>
-						<a class="social__item-link social__item-icon" href="https://join.skype.com/invite/JKnlrLkhC9We"
-							target="_blank">
-							<img class="page__img" src="assets/img/social/icon-social-skype.svg">
-						</a>
-						<a class="social__item-link social__item-icon" href="telegram.me/@skironn" target="_blank">
-							<img class="page__img" src="assets/img/social/icon-social-telegram.svg">
-						</a>
+					<div class="social"><a class="social__item-link social__item-icon" href="+79152834518"
+							target="_blank"><img class="page__img" src="assets/img/social/icon-social-phone.svg"></a><a
+							class="social__item-link social__item-icon" href="nshvtsv@gmail.com" target="_blank"><img
+								class="page__img" src="assets/img/social/icon-social-email.svg"></a><a
+							class="social__item-link social__item-icon" href="https://vk.com/darknesschxld"
+							target="_blank"><img class="page__img" src="assets/img/social/icon-social-vk.svg"></a><a
+							class="social__item-link social__item-icon"
+							href="https://join.skype.com/invite/JKnlrLkhC9We" target="_blank"><img class="page__img"
+								src="assets/img/social/icon-social-skype.svg"></a><a
+							class="social__item-link social__item-icon" href="https://t.me/skironn" target="_blank"><img
+								class="page__img" src="assets/img/social/icon-social-telegram.svg"></a>
 					</div>
+				</div>
+			</div>
+		</section>
+		<section class="modal modal-skills page_hidden" id="modal-skills">
+			<div class="modal-container">
+				<div class="modal__action">
+					<button class="page__btn page__btn_circle page__btn_close close-modal"
+						data-modal="modal-skills"></button>
+				</div>
+				<div class="modal__content">
+					<ul class="page__lists">
+						<li class="page__list page__list_text">Адаптивная верстка, даже если не&nbsp;имеете макеты
+							сделаю адаптив&nbsp;по <strong class="page_bold">методологии responsive;</strong></li>
+						<li class="page__list page__list_text">Внедрю микроразметку <strong class="page_bold">schema.org
+								и&nbsp;Open Graph, </strong>а&nbsp;также семантическую верстку;</li>
+						<li class="page__list page__list_text">Веду <strong class="page_bold">компонентный
+							</strong>подход разработки;</li>
+						<li class="page__list page__list_text">Произвожу оптимизацию кода и&nbsp;изображенией, перед
+							сдачей проекта смотрю на&nbsp;показатели <strong class="page_bold">Google
+								Pagespeed;</strong></li>
+						<li class="page__list page__list_text">Разрабатываю исключительно через <strong
+								class="page_bold">git;</strong></li>
+						<li class="page__list page__list_text">Использую flexbox и&nbsp;самописную библиотеку mixin's.
+						</li>
+						<li class="page__list page__list_text">На больших проектах использую делегирование задач через
+							trello</li>
+						<li class="page__list page__list_text">Работа с фреймворком <strong class="page_bold">Angular
+								2+;</strong></li>
+						<li class="page__list page__list_text">Работа с <strong class="page_bold">TypeScript,
+							</strong>понимание типизации;</li>
+						<li class="page__list page__list_text">Работа с <strong class="page_bold">JavaScript
+							</strong>уровень middle(понимание контекст, замыкание, итд);</li>
+						<li class="page__list page__list_text">Реализация логике на <strong
+								class="page_bold">JS;</strong></li>
+						<li class="page__list page__list_text">Работа с <strong class="page_bold">DOM;</strong></li>
+						<li class="page__list page__list_text">Применение в работе <strong
+								class="page_bold">jQuery</strong>(при крайней необходимости);</li>
+						<li class="page__list page__list_text">Работа с <strong class="page_bold">npm, yarn, gulp,
+								webpack;</strong></li>
+						<li class="page__list page__list_text">Применение в работе <strong class="page_bold">Git,
+							</strong>Работа по модели Git Flow(Работа с GitHub, GitLab, Bitbucket);</li>
+						<li class="page__list page__list_text">Навык разработке в команде больше 1-ого года. (Применение
+							review code)</li>
+						<li class="page__list page__list_text">Работа с <strong class="page_bold">HTML 5 API;</strong>
+						</li>
+						<li class="page__list page__list_text">Работа с <strong class="page_bold">CSS 3
+							</strong>фреймворками <strong class="page_bold">SmartGrid, bootsrtap 3/4;</strong></li>
+						<li class="page__list page__list_text">Работа с препроцессорами <strong class="page_bold">Less,
+								Sass/Scss;</strong></li>
+						<li class="page__list page__list_text">Написание классов и ведение структры по <strong
+								class="page_bold">БЭМ </strong>методологии;</li>
+						<li class="page__list page__list_text">Понимание модели <strong class="page_bold">table, block,
+								Inline-block, Flexbox, Grid-system;</strong></li>
+						<li class="page__list page__list_text">Понимание позиционирования;</li>
+						<li class="page__list page__list_text"> <strong class="page_bold">Кроссбраузерная вёрстка
+							</strong>on default;</li>
+						<li class="page__list page__list_text">Работа с <strong class="page_bold">CSS
+								animations;</strong></li>
+						<li class="page__list page__list_text">Работа с CMS: <strong class="page_bold">1C Bitrix,
+								Wordpress, MODx;</strong></li>
+						<li class="page__list page__list_text">Умение брать всю необходимую информацию из макетов от
+							дизайнеров.</li>
+						<li class="page__list page__list_text">Работа с графическим редактором <strong
+								class="page_bold">Photoshop, Figma, Zeplin.</strong></li>
+						<li class="page__list page__list_text">Базовые знания <strong class="page_bold">SEO (в
+								разработке).</strong></li>
+						<li class="page__list page__list_text">Настройка <strong class="page_bold">Yandex.Metrika
+								Google.Analytics;</strong></li>
+						<li class="page__list page__list_text">Навык делегирование задач;</li>
+						<li class="page__list page__list_text">Навык декомпозиции задач;</li>
+						<li class="page__list page__list_text">Работа с task manager: <strong class="page_bold">JIRA,
+								trello, bitrix24.</strong></li>
+						<li class="page__list page__list_text"> <strong class="page_bold">Здравая </strong>оценка
+							сроков;</li>
+					</ul>
 				</div>
 			</div>
 		</section>
@@ -432,15 +512,13 @@
 				</div>
 				<div class="footer-content__item">
 					<div class="page__subtitle page_padding-bottom-25">социальные сети</div>
-					<div class="social">
-						<a class="social__item-link social__item-icon" href="https://www.facebook.com/" target="_blank">
-							<img class="page__img" src="assets/img/social/icon-social-fb.svg"></a><a
-							class="social__item-link social__item-icon" href="https://vk.com/darknesschxld"
-							target="_blank"><img class="page__img" src="assets/img/social/icon-social-vk.svg"></a><a
+					<div class="social"><a class="social__item-link social__item-icon"
+							href="https://vk.com/darknesschxld" target="_blank"><img class="page__img"
+								src="assets/img/social/icon-social-vk.svg"></a><a
 							class="social__item-link social__item-icon"
-							href="https://join.skype.com/invite/fcSLPdcmNNcH" target="_blank"><img class="page__img"
+							href="https://join.skype.com/invite/JKnlrLkhC9We" target="_blank"><img class="page__img"
 								src="assets/img/social/icon-social-skype.svg"></a><a
-							class="social__item-link social__item-icon" href="telegram.me/@skironn" target="_blank"><img
+							class="social__item-link social__item-icon" href="https://t.me/skironn" target="_blank"><img
 								class="page__img" src="assets/img/social/icon-social-telegram.svg"></a>
 					</div>
 				</div>
@@ -457,7 +535,10 @@
 		-->
 	<script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-analytics.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/scroll-up.js"></script>
 	<script src="js/store-scroll.js"></script>
+	<script src="js/animations.js"></script>
+	<script src="js/modal.js"></script>
 	<script src="js/canvans-rings.js"></script>
 	<script src="js/scroll-anchors.js"></script>
 </body>
